tests/query_test/test_sort.py
@@ -61,6 +61,25 @@ class TestQueryFullSort(ImpalaTestSuite):
         query, exec_option, table_format=table_format).data)
       assert(result[0] == sorted(result[0]))
 
+  def test_multiple_mem_limits_full_output(self, vector):
+    """ Exercise a range of memory limits, returning the full sorted input. """
+    query = """select o_orderdate, o_custkey, o_comment
+      from orders
+      order by o_orderdate"""
+    exec_option = vector.get_value('exec_option')
+    table_format = vector.get_value('table_format')
+
+    max_block_mgr_memory_values = ['-1', '48M'] # Unlimited and minimum memory.
+    if self.exploration_strategy() == 'exhaustive' and \
+        table_format.file_format == 'parquet':
+      # Test some intermediate values for parquet on exhaustive.
+      max_block_mgr_memory_values += ['64M', '128M', '256M']
+    for max_block_mgr_memory in max_block_mgr_memory_values:
+      exec_option['max_block_mgr_memory'] = max_block_mgr_memory
+      result = transpose_results(self.execute_query(
+        query, exec_option, table_format=table_format).data)
+      assert(result[0] == sorted(result[0]))
+
   def test_sort_join(self, vector):
     """With 200m memory limit this should be a 2-phase sort"""
 
@@ -99,9 +118,9 @@ class TestQueryFullSort(ImpalaTestSuite):
     in the right partition.
     """
     query = """select l_orderkey from (
-      select * from tpch.lineitem limit 300000
+      select * from lineitem limit 300000
       union all
-      select * from tpch.lineitem limit 300000) t
+      select * from lineitem limit 300000) t
     order by l_orderkey"""
 
     exec_option = vector.get_value('exec_option')
